<resources>
    <string name="app_name">丹拿之声</string>
    <string name="login">登录</string>
    <string name="audio_settings">声音设置</string>
    <string name="dynaudio_ai_music_car">丹拿智能音乐座舱</string>
    <string name="home_top_content">了解您的智能音乐座舱，体验音乐厅级的极致</string>
    <string name="immediate_experience">立即体验</string>
    <string name="hifi_content_default">甄选高品质HiFi金曲\n专注声音的精彩细节，诠释细腻情感\n等你来听</string>
    <string name="dynaudio">DYNAUDIO</string>

    <!--我的-->
    <string name="my_title">我的</string>
    <string name="login_now">立即登录</string>
    <string name="user_login">用户登录</string>
    <string name="wechat_login">微信登录</string>
    <string name="phone_login">手机登录</string>
    <string name="code_login_hint">请使用微信扫描二维码登录</string>
    <string name="input_phone_number_hint">请输入手机号码</string>
    <string name="input_message_code_hint">请输入短信验证码</string>
    <string name="send_verification_code">发送验证码</string>
    <string name="not_for_phone_number_hint">未注册手机号将自动创建账号</string>
    <string name="read_and_confirm_policy">已阅读并同意“用户协议”及“隐私政策”</string>
    <string name="not_login_user_name_def">尊贵的仰望车主</string>
    <string name="login_user_name_def">丹拿用户</string>
    <string name="hint">甄选丹拿高品质内容，登录免费领取</string>
    <string name="collect">我的收藏</string>
    <string name="record">播放记录</string>
    <string name="setting">设置</string>
    <string name="skin_setting">外观设置</string>
    <string name="follow_system">跟随系统</string>
    <string name="dark_mode">深色模式</string>
    <string name="light_mode">浅色模式</string>
    <string name="user_management">账号管理</string>
    <string name="user_management_content">限时体验会员特权</string>
    <string name="clear_cache">清除缓存</string>
    <string name="feed_back">意见反馈</string>
    <string name="privacy_policy">隐私政策</string>
    <string name="user_agreement">用户协议</string>
    <string name="about_dyna">关于丹拿之声</string>
    <string name="log_out">退出登录</string>
    <string name="version">版本信息</string>
    <string name="golden_song">丹拿甄选 宝藏金曲</string>
    <string name="play_all">播放全部</string>
    <string name="loading">加载中...</string>
    <string name="loaded_all">已全部加载</string>
    <string name="sound_setting">声音设置</string>
    <string name="ssf">声场聚焦</string>
    <string name="sc">声音特色</string>
    <string name="ssf_regulation">声场聚焦调节</string>
    <string name="surround">环绕</string>
    <string name="back_row">后排</string>
    <string name="first_officer">副驾</string>
    <string name="main_driver">主驾</string>
    <string name="all_car">全车</string>
    <string name="tips_in_ssf">针对不同乘客位置进行声音频率调整，声场的过渡更加平缓顺滑，将舞台搬到你的面前。</string>
    <string name="click_or_drag">点击或拖动圆点调节</string>
    <string name="originalSound">原声</string>
    <string name="soft">柔和</string>
    <string name="dynamic">动感</string>
    <string name="intelligent_regulation">智能调节</string>
    <string name="tv_00">大师调校，内容匹配</string>
    <string name="tv_1">声音特色增强</string>
    <string name="tv_11">预设调音，无损呈现</string>
    <string name="tv_2">自定义</string>
    <string name="tv_22">进阶乐迷，完美EQ</string>
    <string name="reset">重置</string>
    <string name="tips_in_sc">声音均衡自定义调节，精准呈现声音细节，还原第一现场的极致听感。</string>
    <string name="bass">重低音</string>
    <string name="low">低</string>
    <string name="mid">中</string>
    <string name="high">高</string>
    <string name="p9db">+9db</string>
    <string name="m9db">-9db</string>
    <string name="default_number">1</string>
    <string name="intelligent_music_cabin">智能音乐座舱</string>
    <string name="sales_presentation_sub_title">体验音乐厅级的视听盛宴</string>
    <string name="start_click">点击开启震撼体验</string>
    <string name="no_url">播放地址无效</string>
    <string name="immersion3d">3D沉浸音效</string>
    <string name="immersion3d_content">3D沉浸音效为您带来更具空间感的音效体验</string>
    <string name="power_content">不同声道数量和功率，体验音乐厅级的震撼效果。</string>
    <string name="power">澎湃动力功放</string>
    <string name="share">分享</string>
    <string name="plz_share_with_wechat">请使用微信扫描二维码后分享</string>
    <string name="tips_in_3d_immersion">点击切换试听音效进行对比</string>
    <string name="normal_stereo">普通立体声</string>
    <string name="thunder_rain">雷雨</string>
    <string name="symphony">交响乐演奏</string>
    <string name="helicopter">直升机</string>
    <string name="small_power">小功率功放</string>
    <string name="folk_music">民乐</string>
    <string name="symphony2">交响乐</string>
    <string name="rock_music">摇滚乐</string>
    <string name="black_glue">黑胶专区</string>
    <string name="audio_column">有声专栏</string>
    <string name="immersion_special">沉浸音专区</string>
    <string name="share_video">视频分享</string>
    <string name="play_error">播放出错</string>
    <string name="collect_error">收藏失败，请检查网络连接是否可用...</string>
    <string name="lrc_label">暂无歌词</string>
    <string name="nonetwork">无网络连接,请检查网络后重试</string>
    <string name="lrc_loading">歌词加载中...</string>
    <string name="by_string_loading">努力加载中…</string>
    <string name="play_list">播放列表</string>
    <string name="checknet">当前网络不可用,请检查网络设置</string>
    <string name="by_string_try_load">数据请求失败,请重新尝试</string>
    <string name="topBgContent">每一段旋律，都藏着情绪；每一段音乐，都敲击着灵魂</string>
    <string name="BANNER">Banner</string>
    <string name="HIFIURL">HIFIURL</string>
    <string name="HIFIBEAN">HIFIBEAN</string>
    <string name="BLACK_PLASTIC">黑胶</string>
    <string name="AUDIO_COLUMN">有声</string>
    <string name="IMMERSION_SOUND">沉浸音</string>
    <string name="AUDIOSTATION">电台</string>
    <string name="update_today">今日更新</string>
    <string name="currentP_cantPlayVideo">请在P档状态下观看视频</string>

</resources>