<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <!--    声音特色-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_sc"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_tip_top"
            android:layout_width="108dp"
            android:layout_height="20dp"
            android:layout_marginTop="40dp"
            android:text="@string/click_or_drag"
            android:textColor="#ffffffff"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/ll_left_sc"
            android:layout_width="153dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="@id/scc"
            app:layout_constraintEnd_toStartOf="@id/scc"
            app:layout_constraintTop_toTopOf="@id/scc">

            <LinearLayout
                android:id="@+id/ll_0"
                android:layout_width="153dp"
                android:layout_height="82dp"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/intelligent_regulation"
                    android:textColor="@color/white_alpha_45"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_00"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/tv_00"
                    android:textColor="@color/white_alpha_45"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_1"
                android:layout_width="153dp"
                android:layout_height="82dp"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/tv_1"
                    android:textColor="@color/white_alpha_45"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/tv_11"
                    android:textColor="@color/white_alpha_45"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_2"
                android:layout_width="153dp"
                android:layout_height="82dp"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/tv_2"
                    android:textColor="@color/white_alpha_45"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_22"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/tv_22"
                    android:textColor="@color/white_alpha_45"
                    android:textSize="12sp" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/tv_reset"
            android:layout_width="65dp"
            android:layout_height="28dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/reset_bg"
            android:gravity="center"
            android:text="@string/reset"
            android:textColor="@color/white_alpha_80"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/scc"
            app:layout_constraintBottom_toTopOf="@id/tv_tips_sc"
            app:layout_constraintStart_toStartOf="@id/scc"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_tips_sc"
            android:layout_width="276dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="118dp"
            android:gravity="center_horizontal"
            android:maxLines="3"
            android:text="@string/tips_in_sc"
            android:textColor="@color/white_alpha_45"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

<!--        <ImageView-->
<!--            android:id="@+id/img_bg_for_intel"-->
<!--            android:layout_width="300dp"-->
<!--            android:layout_height="300dp"-->
<!--            android:src="@drawable/img_bg_for_intel_adjustment"-->
<!--            app:layout_constraintBottom_toBottomOf="@id/scc"-->
<!--            app:layout_constraintEnd_toEndOf="@id/scc"-->
<!--            app:layout_constraintStart_toStartOf="@id/scc"-->
<!--            app:layout_constraintTop_toTopOf="@id/scc" />-->

        <com.byd.dynaudio_app.custom.ScView
            android:id="@+id/intel_adjustment"
            android:layout_width="288dp"
            android:layout_height="288dp"
            android:layout_marginTop="45dp"
            app:layout_constraintTop_toBottomOf="@id/tv_tip_top"
            app:layout_constraintEnd_toEndOf="@id/tv_tip_top"
            app:layout_constraintStart_toStartOf="@id/tv_tip_top" />

        <com.byd.dynaudio_app.custom.ScView
            android:id="@+id/scc"
            android:layout_width="288dp"
            android:layout_height="288dp"
            android:layout_marginTop="45dp"
            app:layout_constraintTop_toBottomOf="@id/tv_tip_top"
            app:layout_constraintEnd_toEndOf="@id/tv_tip_top"
            app:layout_constraintStart_toStartOf="@id/tv_tip_top" />

        <com.byd.dynaudio_app.custom.ScCustomView
            android:id="@+id/scd"
            android:layout_width="300dp"
            android:layout_height="266dp"
            android:layout_marginTop="140dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>