<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="56dp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="44dp">

                <ImageView
                    android:id="@+id/btn_back"
                    android:layout_width="64dp"
                    android:layout_height="44dp"
                    android:scaleType="center"
                    android:src="@mipmap/ic_back" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/setting"
                    android:textColor="@color/white_alpha_80"
                    android:textSize="15sp"
                    android:textStyle="bold" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <RelativeLayout
                    android:id="@+id/rl_user_management"
                    android:layout_width="match_parent"
                    android:layout_height="63dp"
                    android:visibility="gone"
                    android:background="@color/dark_item"
                    android:padding="20dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:text="@string/user_management"
                        android:textColor="@color/white_alpha_80"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="16dp"
                        android:layout_height="16dp"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="3dp"
                        android:background="@mipmap/ic_arrow" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rl_skin_setting"
                    android:layout_width="match_parent"
                    android:layout_height="63dp"
                    android:visibility="gone"
                    android:background="@color/dark_item"
                    android:padding="20dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:text="@string/skin_setting"
                        android:textColor="@color/white_alpha_80"
                        android:textSize="18sp"
                        android:textStyle="bold" />


                    <TextView
                        android:id="@+id/txt_skin_mode"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toStartOf="@id/view_end_arrow"
                        android:text="@string/follow_system"
                        android:textColor="@color/white_alpha_80"
                        android:textSize="15sp" />

                    <View
                        android:id="@+id/view_end_arrow"
                        android:layout_width="16dp"
                        android:layout_height="16dp"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="3dp"
                        android:background="@mipmap/ic_arrow" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rl_clear"
                    android:layout_width="match_parent"
                    android:layout_height="63dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/dark_item"
                    android:padding="20dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/clear_cache"
                        android:textColor="@color/white_alpha_80"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txt_cache_size"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignParentEnd="true"
                        android:textColor="@color/white_alpha_45"
                        android:textSize="18sp" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rl_feed_back"
                    android:layout_width="match_parent"
                    android:layout_height="63dp"
                    android:background="@color/dark_item"
                    android:padding="20dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:text="@string/feed_back"
                        android:textColor="@color/white_alpha_80"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="16dp"
                        android:layout_height="16dp"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="3dp"
                        android:background="@mipmap/ic_arrow" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rl_privacy_policy"
                    android:layout_width="match_parent"
                    android:layout_height="63dp"
                    android:background="@color/dark_item"
                    android:padding="20dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:text="@string/privacy_policy"
                        android:textColor="@color/white_alpha_80"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="16dp"
                        android:layout_height="16dp"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="3dp"
                        android:background="@mipmap/ic_arrow" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rl_user_agreement"
                    android:layout_width="match_parent"
                    android:layout_height="63dp"
                    android:background="@color/dark_item"
                    android:padding="20dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:text="@string/user_agreement"
                        android:textColor="@color/white_alpha_80"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="16dp"
                        android:layout_height="16dp"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="3dp"
                        android:background="@mipmap/ic_arrow" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rl_about"
                    android:layout_width="match_parent"
                    android:layout_height="63dp"
                    android:background="@color/dark_item"
                    android:padding="20dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:text="@string/about_dyna"
                        android:textColor="@color/white_alpha_80"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="16dp"
                        android:layout_height="16dp"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="3dp"
                        android:background="@mipmap/ic_arrow" />

                </RelativeLayout>

                <TextView
                    android:id="@+id/txt_log_out"
                    android:layout_width="match_parent"
                    android:layout_height="73dp"
                    android:layout_marginTop="11dp"
                    android:background="@color/dark_item"
                    android:gravity="center"
                    android:text="@string/log_out"
                    android:textColor="@color/white_alpha_80"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:visibility="gone" />

            </LinearLayout>

        </LinearLayout>

    </FrameLayout>

</layout>